Fix still overflowing

--- a/styles.css
+++ b/styles.css
@@ -158,8 +158,7 @@ button:disabled {
   flex-direction: column;
   flex-grow: 1;
   align-items: center;
-  overflow: hidden;
-  max-height: calc(100vh - 330px);
+  overflow-y: auto;
 }
 
 .event-scroll-container {
